<resources>
    <string name="app_name">Watch my time</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">My tasks</string>
    <string name="add_task_button">Add a \n new task</string>
    <string name="new_task_button">Add</string>
    <string name="title_record_details">Record Details</string>
    <string name="record_details_column_1">Day</string>
    <string name="record_details_column_2">Duration</string>
    <string name="new_task_dialog_title">New task</string>
    <string name="reset_app_dialog_title">Do you really want to reset the application ?</string>
    <string name="reset_app_dialog_validate">Reset Application</string>
    <string name="cancel">Cancel</string>
    <string name="reset_app_btn">Reset app and erase data </string>
    <string name="settings_title">Settings </string>
    <string name="global_settings_title">Global settings </string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="no_selection_dropdown">Nothing selected</string>
    <string name="data_consent_title">Before using watch my time</string>
    <string name="accept">I agree</string>
    <string name="general_conditions"> To work, the "Watch My Time" application needs some information about you. During your usage, you will add task you want to track. These tasks could be related to your points of interest or activities. You will also track your time activity for these tasks.
\n \n
These are the only information stored by the application. These information are stored locally and not used and not sent anywhere. You can erase these information whenever you want on in the settings page of the application. \n
\n
        By continuing to the application, you agree that the application store these information on your phone.</string>
</resources>