<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.utt.if26.duciel_projet.controller.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fr.utt.if26.duciel_projet.controller.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="fr.utt.if26.duciel_projet.controller.recordDetails.RecordDetailsFragment"
        android:label="@string/title_record_details"
        tools:layout="@layout/fragment_record_details" />

    <fragment
        android:id="@+id/settings"
        android:name="fr.utt.if26.duciel_projet.controller.SettingFragment"
        android:label="@string/title_record_details"
        tools:layout="@layout/fragment_setting" />
</navigation>